# Koala

./: .clang-format  CMakeLists.txt  LICENSE  README.md
cmake/: FindCereal.cmake  koala-config.cmake.in
doc/: CMakeLists.txt  Doxyfile.in
images/: koala.pyxel
include/koala/: Algorithm.h  Algorithm.txx  CerealHeaders.h  Definitions.h  FunctionRecorder.h  KoalaException.h  Lock.h  OutputStream.h  ProgressBar.h  ProgressBarManager.h  ProgressBarManager.txx  RangeBasedContainer.h  RangeBasedContainer.txx
include/koala/Definitions/: ColourDefinitions.h  CommonDefinitions.h  CursorDefinitions.h  ExceptionDefinitions.h  GetterSetterDefinitions.h  ObjectDefinitions.h  RegistryDefinitions.h
include/koala/Koala/: Koala.h  Koala.txx  KoalaApi.h  KoalaApi.txx
include/koala/Registry/: HierarchicalEdge.h  HierarchicalEdge.txx  HierarchicalPseudoEdge.h  HierarchicalPseudoEdge.txx  ObjectAssociation.h  ObjectAssociation.txx  ObjectRegistry.h  ObjectRegistry.txx
include/koala/Templates/: HierarchicalObjectTemplate.h  HierarchicalObjectTemplate.txx  RegisteredObjectTemplate.h  RegisteredObjectTemplate.txx
include/koala/Utilities/: DebugUtility.h  DebugUtility.txx  ExecUtility.h  FilesystemUtility.h  HierarchicalObjectUtility.h  HierarchicalObjectUtility.txx  HierarchicalVisualizationUtility.h  HierarchicalVisualizationUtility.txx  OutputUtility.h  StringUtility.h  VisualizationUtility.h
templates/: TemplateAlgorithm.cxx  TemplateAlgorithm.h  TemplateHierarchicalObject.cxx  TemplateHierarchicalObject.h  TemplateObject.cxx  TemplateObject.h  TemplateRegisteredObject.cxx  TemplateRegisteredObject.h
test/: CMakeLists.txt  TestAlgorithm.cxx  TestAlgorithm.h  TestEdge.h  TestObject.cxx  TestObject.h  test.cxx
